--- a/main.css
+++ b/main.css
@@ -122,6 +122,8 @@ body
     vertical-align: middle;
     border-radius: 0.5vmin;
     flex:2;
+    width:100%;
+    height:100%;
 }
 p {
     margin: 0;
@@ -318,16 +320,17 @@ select:disabled {
 }
 
 #pokemon_image {
-    max-width:100%;
-    max-height:100%;
-}
-
-#pokemon_image_div{
-    flex: 1;
     left:0;
+    width:100%;
+    height:100%;
     background:url(UI_images/holder.svg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
+}
+
+#pokemon_image_div{
+    margin-top:auto;
+    margin-bottom: auto;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -369,9 +372,9 @@ select:disabled {
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    width: 100%;
-    max-height: 100%;
-    max-width: 100%;
+    width: ;
+    max-height: 25vh;
+    max-width: 25vh;
     margin-left:auto;
     margin-right:auto;
     display: inline-block;
@@ -395,6 +398,10 @@ select:disabled {
 {
     display: block;
     height:80%;
+    box-sizing: border-box;
+    padding: 5%;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 #wrapperRadar {
