Solidifying browser cross compatibility

--- a/main.css
+++ b/main.css
@@ -3,35 +3,55 @@ body
     font-family: 'Exo 2', sans-serif;
     background-color: #04171E;
     margin: 0;
+    font-size: 16px;
+    font-size: 0.75vw;
 }
 
 #page_flex {
     width: 100vw;
     height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -ms-flex-direction:column;
     flex-direction:column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 #TOP {
     background-color: transparent;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    height: 50%;
+    width: 100%;
     box-sizing:border-box;
     padding: 1% 1% 0.5% 1%;
     text-align: center;
     vertical-align: middle;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .topVisualizations{
-    background: #116381; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #116381 0%, #005d7f 100%); /* FF3.6-15 */
+    background: #116381; /* Old browsers */ /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg,  #116381 0%,#005d7f 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(315deg,  #116381 0%,#005d7f 100%);
     background: linear-gradient(135deg,  #116381 0%,#005d7f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 #MAP {
+    width:50%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     vertical-align: middle;
     border-radius: 0.5vmin;
@@ -39,62 +59,91 @@ body
     padding: 0.5% 1% 1% 1%;
     box-sizing:border-box;
     margin-right: 0.5%;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -ms-flex-direction:column;
     flex-direction:column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 #selectDataVisualizationPreferences
 {
-    flex:0;
-    flex-basis: auto;
     text-align: left;
-    height:16%;
-    width:98%;
+    width:100%;
+    height: fit-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     color: #fff;
-    padding-left: 2%;
+    box-sizing: border-box;
+    -webkit-box-flex:1;
+    -ms-flex:1;
+    flex:1;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    padding: 0% 3% 0% 3%;
+    margin: 3% 0% 3% 0%;
 }
 #selectDataVisualizationPreferencesHeader
 {
-    flex:0;
-    flex-basis: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    height:7.5%;
     text-align: center;
     width:100%;
     color: #fff;
+    box-sizing: border-box;
+    -webkit-box-flex:1;
+    -ms-flex:1;
+    flex:1;
+    height: fit-content;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    padding: 0% 3% 0% 3%;
+    margin: 3% 0% 3% 0%;
 }
 .textHeader
 {
     margin-left:auto;
     display: inline-block;
-    font-size: 25px;
+    font-size: 16px;
+    font-size: 1.25vw;
 }
 .largerLabel {
     display: inline-block;
     margin-right: 4px;
 }
-#alignMapCenter{
-    display: flex;
-    align-items: center;
-    height:74%;
-}
 #wrapMap
 {
-    margin: 1%;
-    width:100%;
+    -webkit-box-flex:1;
+    -ms-flex:1;
+    flex:1;
+    width: 100%;
+    height: fit-content;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    padding: 0% 3% 0% 3%;
+    box-sizing: border-box;
 }
 #wrapper {
-    border-radius: 0.5vmin;
-    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    border-radius: 0.5vmin; /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(315deg,  #0b4054 0%,#0a3c4e 100%);
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-    width: 100%;
-    max-height: 30vh;
-    max-width: 45vh;
+    width: 90%;
+    max-height: 100%;
+    max-width: 35vh;
     /* whatever width you want */
     display: inline-block;
     position: relative;
@@ -105,9 +154,10 @@ body
     display: block;
     content: '';
 }
+
 #SHAPESDIV {
     border-radius: 0.5vmin;
-    width: inherit;
+    width: 100%;
     height: inherit;
     position: absolute;
     top: 0;
@@ -121,9 +171,11 @@ body
     display: inline-block;
     vertical-align: middle;
     border-radius: 0.5vmin;
+    -webkit-box-flex:2;
+    -ms-flex:2;
     flex:2;
-    width:100%;
-    height:100%;
+    max-height:100%;
+    width:50%;
 }
 p {
     margin: 0;
@@ -157,7 +209,8 @@ select:disabled {
 #select_Region{
     color: #fff;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 16px;
+    font-size: 1.25vw;
     padding: 0;
     background-color: transparent;
     margin: 0;
@@ -171,11 +224,17 @@ select:disabled {
 }
 #INDIVIDUAL {
     background-color: transparent;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    height: 50%;
+    width: 100%;
     box-sizing:border-box;
     padding: 0.5% 1% 1% 1%;
     text-align: center;
     vertical-align: middle;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -183,13 +242,24 @@ select:disabled {
     display: inline-block;;
     width: 100%;
     border-radius: 0.5vmin;
-    height: 100%;
     text-align: left;
     overflow: hidden;
+    box-sizing:border-box;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    height: initial;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#116381+0,005d7f+100 */
-    background: #116381; /* Old browsers */
-    background: -moz-linear-gradient(-45deg,  #116381 0%, #005d7f 100%); /* FF3.6-15 */
+    background: #116381; /* Old browsers */ /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg,  #116381 0%,#005d7f 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(315deg,  #116381 0%,#005d7f 100%);
     background: linear-gradient(135deg,  #116381 0%,#005d7f 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
@@ -197,29 +267,25 @@ select:disabled {
 #pokemon_header {
     padding-left: 3%;
     box-sizing:border-box;
+    -webkit-box-flex:0;
+    -ms-flex:0;
     flex:0;
+    -ms-flex-preferred-size: auto;
     flex-basis: auto;
     text-align: center;
     height:10%;
     width:100%;
     background-color: #0B4153;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     color: #fff;
     margin: 0;
+    max-height:10%;
     border-radius: 0.5vmin 0.5vmin 0 0;
-}
-
-#center_pokemon_image {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    width:100%;
-    box-sizing:border-box;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
-    padding-left: 1vw;
-    padding-right: 1vw;
 }
 
 #pokemon_header > p {
@@ -239,12 +305,15 @@ select:disabled {
     border-width: 1px;
     border: solid;
     border-radius: 15px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     padding: 2px;
     height: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: 0.75%;
+    max-height:100%;
 }
 #normal {
     background-color: #A8A878;
@@ -336,34 +405,52 @@ select:disabled {
 }
 
 #encloseImage{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
-    background-color: #082F3D;
-    background: -moz-linear-gradient(-45deg,  #0a3c4e 0%, #082F3D 100%); /* FF3.6-15 */
+    background-color: #082F3D; /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #0a3c4e 0%, #082F3D 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(315deg,  #0a3c4e 0%,#082F3D 100%);
     background: linear-gradient(135deg,  #0a3c4e 0%,#082F3D 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     border-radius: 0.5vmin;
     margin-right:0.5%;
     overflow: hidden;
-    height: 100%;
     text-align: center;
     width: 25vw;
 }
 #typesDiv{
     border-radius: 0.5vmin;
-    background-color: #0b4054;
-    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    background-color: #0b4054; /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(315deg,  #0b4054 0%,#0a3c4e 100%);
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     margin-left:0.5%;
-    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -ms-flex-direction:column;
     flex-direction:column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -ms-flex-line-pack: start;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
     align-content: flex-start;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
 }
 #wrapperType {
@@ -383,84 +470,57 @@ select:disabled {
     display: block;
     content: '';
 }
-#wrapRadar
+#radar
 {
     display: inline-block;
     width: 48%;
+    max-height:100%;
     margin-left:auto;
     margin-right:auto;
+    border-radius: 0.5vmin;
 }
 #wrapType
 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
     display: block;
-    height:80%;
     box-sizing: border-box;
     padding: 5%;
     margin-left:auto;
     margin-right:auto;
 }
-
-#wrapperRadar {
-    border-radius: 0.5vmin;
-    width: 100%;
-    max-height: 100%;
-    max-width: 100%;
-    display: inline-block;
-    position: relative;
-
-}
-#wrapperRadar:after {
-    padding-top: 100%;
-    /* 16:9 ratio */
-    display: block;
-    content: '';
-}
-#wrapStats
+#stats_progression
 {
     display: inline-block;
     width: 48%;
+    max-height:100%;
     margin-left:auto;
     margin-right:auto;
-}
-#wrapperStats {
     border-radius: 0.5vmin;
-    width: 100%;
-    max-height: 100%;
-    max-width: 100%;
-    display: inline-block;
-    position: relative;
-
-}
-#wrapperStats:after {
-    padding-top: 100%;
-    /* 16:9 ratio */
-    display: block;
-    content: '';
 }
 
 #stats_div {
+    -webkit-box-flex: 3;
+    -ms-flex: 3;
     flex: 3;
     border-radius: 0.5vmin;
-    background-color: #0b4054;
-    background: -moz-linear-gradient(-45deg,  #0b4054 0%, #0a3c4e 100%); /* FF3.6-15 */
+    background-color: #0b4054; /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #0b4054 0%, #0a3c4e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: -webkit-linear-gradient(315deg,  #0b4054 0%,#0a3c4e 100%);
     background: linear-gradient(135deg,  #0b4054 0%,#0a3c4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#116381', endColorstr='#005d7f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     margin-left:1vw;
-    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient:vertical;
+    -webkit-box-direction:normal;
+    -ms-flex-direction:column;
     flex-direction:column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
-}
-#radar{
-    border-radius: 0.5vmin;
-    width: inherit;
-    height: inherit;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
 }
 #typesZing{
     border-radius: 0.5vmin;
@@ -475,33 +535,39 @@ select:disabled {
 #typesTitle
 {
     box-sizing:border-box;
-    flex:0;
-    flex-basis: auto;
     text-align: center;
-    height:10%;
     width:100%;
+    min-height:10%;
     background-color: #082F3D;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    padding-left: 3%;
-    color: #fff;
     margin: 0;
     border-radius: 0.5vmin 0.5vmin 0 0;
-}
-#stats_progression {
-    border-radius: 0.5vmin;
-    width: inherit;
-    height: inherit;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex:0;
+    -ms-flex:0;
+    flex:0;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+    max-height:10%;
+    color: #fff;
+    padding: 3% 3% 3% 3%;
 }
 #progression
 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    max-height:33.333333333%;
     width: 96%;
     margin-top: 1%;
     margin-bottom: 1%;
@@ -509,6 +575,7 @@ select:disabled {
     margin-right:auto;
 }
 .item {
+    -ms-flex-preferred-size: auto;
     flex-basis: auto; /* default auto */
 }
 #clip_stats > div
@@ -518,16 +585,22 @@ select:disabled {
 #clip_stats{
     border-radius: 0.5vh;
     overflow: hidden;
-    height:100%;
+    height:inherit;
     width: 100%;
+    max-height:100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
- }
+}
 .vert_slider
 {
     text-align: center;
     box-sizing:border-box;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
-    height: 100%;
+    max-height:100%;
+    height:inherit;
     display: inline-block;
 }
 .statHeader
@@ -536,43 +609,53 @@ select:disabled {
     padding: 0;
     text-align: center;
     min-height: 20%;
-    font-size: 15px;
+    max-height:20%;
+    font-size: 16px;
+    font-size: 0.75vw;
     width:100%;
 }
 
 #nature_div
 {
+    -webkit-box-flex:2;
+    -ms-flex:2;
     flex:2;
-    height:100%;
+    width:inherit;
+    max-height:100%;
+    height:inherit;
     display: inline-block;
 }
 #nature
 {
     display: inline-block;
-    overflow: scroll;
-    height:80%;
+    height:inherit;
+    max-height:80%;
     width:100%;
     color: #FFF;
-    font-size: 15px;
+    font-size: 16px;
+    font-size: 0.75vw;
     border-style: none;
     background-color: #116381;
 }
 #nature > option
 {
     padding-left: 5%;
+    max-height:5%;
 }
 #nature_header
 {
     text-align: center;
     height: 20%;
     width:100%;
+    max-height:20%;
     color: #FFF;
-    font-size: 15px;
+    font-size: 16px;
+    font-size: 0.75vw;
     background-color: #082F3D;
 }
 #HP_header
 {
-     background-color: #b20000;
+    background-color: #b20000;
 }
 #attack_header
 {
@@ -622,26 +705,39 @@ select:focus {
     outline:none;
 }
 input[type=range][orient=vertical]
- {
-     writing-mode: bt-lr; /* IE */
-     -webkit-appearance: slider-vertical; /* WebKit */
-     width: 8px;
-     height: 76%;
-     padding: 0 5px;
- }
+{
+    -webkit-writing-mode: bt-lr;
+    -ms-writing-mode: bt-lr;
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 8px;
+    height: 76%;
+    padding: 1%;
+}
 #stats_zing {
     margin-top: 1%;
     margin-bottom: 1%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    height: fit-content;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     width:100%;
+    max-height:50%;
+    height:66.6666666%;
+    -webkit-box-flex: 2;
+    -ms-flex: 2;
     flex: 2;
 }
 
 #info {
     text-align: center;
+    -webkit-box-flex:0;
+    -ms-flex:0;
     flex:0;
+    -ms-flex-preferred-size: 7.5vh;
     flex-basis: 7.5vh;
+    max-height: 7.5vh;
     padding-bottom: 1%;
     color: #FFF;
 }
@@ -655,10 +751,16 @@ a {
 }
 #typesText
 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-flex:0;
+    -ms-flex:0;
     flex:0;
+    -ms-flex-preferred-size: auto;
     flex-basis: auto;
     min-height:10%;
+    max-height:10%;
     color: #fff;
     padding: 0% 3% 3% 3%;
 }
@@ -666,4 +768,5 @@ a {
 #contribute
 {
     font-size: 12px;
+    font-size: 0.5vw;
 }
