CSS and Graph fixes

--- a/main.css
+++ b/main.css
@@ -610,8 +610,9 @@ select:disabled {
     -ms-flex: 1;
     flex: 1;
     max-height:100%;
+    flex-direction: column;
     height:inherit;
-    display: inline-block;
+    display: flex;
 }
 .statHeader
 {
@@ -620,6 +621,8 @@ select:disabled {
     text-align: center;
     min-height: 20%;
     max-height:20%;
+    flex: 0;
+    flex-basis: auto;
     font-size: 16px;
     font-size: 1.25vmin;
     width:100%;
@@ -716,12 +719,15 @@ select:focus {
 }
 input[type=range][orient=vertical]
 {
+    flex: 0;
+    flex-basis: auto;
     -webkit-writing-mode: bt-lr;
     -ms-writing-mode: bt-lr;
     writing-mode: bt-lr; /* IE */
     -webkit-appearance: slider-vertical; /* WebKit */
     width: 8px;
-    height: 76%;
+    margin-left: auto;
+    margin-right: auto;
     padding: 1%;
 }
 #stats_zing {
